--- a/README
+++ b/README
@@ -2,5 +2,6 @@ This repository contains various programs which assist in mathematical processes
 
 
 CONTENTS:
-
-matrixmult.c
+  matrixmult.c  ------------------------ Multiplying two matrices by each other (of any reasonable size)
+  primeNumberTester.c ------------------ Testing the primality of a number up to 64 bits in size (unsigned)
+  statisticalAnalysis.c----------------- Calculating statistical averages of a given set of numbers
