--- a/README
+++ b/README
@@ -1,15 +1,21 @@
 This repository contains various programs which assist in mathematical processes.
 
+The complexity of the algorithms implemented within the following programs is denoted on the side.
+
+[1]=Fairly Simple
+[2]=Medium Difficulty
+[3]=Very Hard
 
 CONTENTS:
-  Disc.java----------------------------- Generating and printing Fibonacci Sequencecs
-  Prime.java---------------------------- Finding the nth prime number
-  combinations.c------------------------ Calculating Combination
-  gcd.c--------------------------------- Calculating the greatest common denominator of two integers
-  matrixmult.c  ------------------------ Multiplying two matrices by each other (of any reasonable size)
-  permutations.c------------------------ Calculating Permutations
-  primeNumberTester.c ------------------ Testing the primality of a number up to 64 bits in size (unsigned)
-  statisticalAnalysis.c----------------- Calculating statistical averages of a given set of numbers
+[1]  Disc.java----------------------------- Generating and printing Fibonacci Sequencecs
+[2]  Prime.java---------------------------- Finding the nth prime number
+[1]  bigNumber.java------------------------ Adding two numbers of infinite size together
+[2]  combinations.c------------------------ Calculating Combination
+[1]  gcd.c--------------------------------- Calculating the greatest common denominator of two integers
+[2]  matrixmult.c  ------------------------ Multiplying two matrices by each other (of any reasonable size)
+[1] permutations.c------------------------ Calculating Permutations
+[3]  primeNumberTester.c ------------------ Testing the primality of a number up to 64 bits in size (unsigned) using bit shifts
+[1]  statisticalAnalysis.c----------------- Calculating statistical averages of a given set of numbers
 
 
   
